Add Detekt static analysis to CI workflow and update color definitions

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,3 +25,5 @@ jobs:
       - name: Testar
         run: ./gradlew test
 
+      - name: Análise estática com Detekt
+        run: ./gradlew detekt --continue
