Add steps to generate and upload debug APK in CI workflow

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -27,3 +27,12 @@ jobs:
 
       - name: Análise estática com Detekt
         run: ./gradlew detekt --continue
+
+      - name: Gerar APK (assembleDebug)
+        run: ./gradlew assembleDebug
+
+      - name: Upload APK gerado
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
