--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build Gradle
         run: ./gradlew build
 
+      - name: Android Lint
+        run: ./gradlew lint
+
       - name: Testar
         run: ./gradlew test
 
