--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Upload APK gerado
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug
+          name: app-debug-${{ github.run_number }}
           path: app/build/outputs/apk/debug/app-debug.apk
