--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -19,6 +19,10 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Restaurar google-services.json
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 -d > app/google-services.json
+
       - name: Build Gradle
         run: ./gradlew build
 
