Add Detekt static analysis step and report upload to CI workflow

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,6 +32,15 @@ jobs:
       - name: Testar
         run: ./gradlew test
 
+      - name: Análise estática com Detekt
+        run: ./gradlew detekt --continue
+
+      - name: Upload Detekt Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: detekt-report
+          path: app/build/reports/detekt
+
       - name: Gerar APK (assembleDebug)
         run: ./gradlew assembleDebug
 
