Disable LongMethod rule in Detekt configuration

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -49,7 +49,7 @@ complexity:
     active: true
     threshold: 300
   LongMethod:
-    active: true
+    active: false
     threshold: 50
   LongParameterList:
     active: true
