--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -31,7 +31,7 @@ output-reports:
 
 style:
   MagicNumber:
-    active: true
+    active: false
     ignoreNumbers: ["-1", "0", "1", "2"]
     ignoreHashCodeFunction: true
   DataClassContainsFunctions:
@@ -67,7 +67,7 @@ naming:
     active: true
     classPattern: '^[A-Z][a-zA-Z0-9]*$'
   FunctionNaming:
-    active: true
+    active: false
     functionPattern: '^[a-z][A-Za-z0-9]*$'
 
 potential-bugs:
